fix dark mode & translations

--- a/_sass/bs5ds/custom/_github.scss
+++ b/_sass/bs5ds/custom/_github.scss
@@ -17,7 +17,7 @@
 }
 
 #forkongithub a{
-  color: $purple-300;
+  color: $purple;
   width:300px;
   padding: 0.5rem;
   position:absolute;
