--- a/_sass/bs5ds/custom/_indexPage.scss
+++ b/_sass/bs5ds/custom/_indexPage.scss
@@ -30,7 +30,7 @@
   letter-spacing: 0.8rem;
   line-height: 2rem;
   height: 120px;
-  color: rgba(153, 161, 169, 1.00);
+  color: rgba(206, 212, 218, 1.00);
   font-weight: lighter !important;
 }
 
